# ex-int-tcl-shlib

./: CMakeLists.txt  README.md
cmake/: BuildTclStatic.cmake
src/: app.c
